Updates download indicator.

--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -291,6 +291,12 @@
                 <Setter Property="Data" Value="M 9 1 L 9 3 L 15 3 L 15 1 L 9 1 z M 12 4 C 7.03 4 3 8.03 3 13 C 3 17.97 7.02 22 12 22 C 16.98 22 21 17.97 21 13 C 21 10.88 20.259297 8.930625 19.029297 7.390625 L 20.449219 5.9707031 C 20.019219 5.4607031 19.549062 4.9805469 19.039062 4.5605469 L 17.619141 5.9804688 C 16.069141 4.7404687 14.12 4 12 4 z M 12 6 C 15.87 6 19 9.13 19 13 C 19 16.87 15.87 20 12 20 C 8.13 20 5 16.87 5 13 C 5 9.13 8.13 6 12 6 z M 12.226562 8.3769531 C 9.6094289 8.4213562 7.5566406 10.55715 7.5566406 13.130859 C 7.5566406 15.759023 9.6901955 17.890625 12.318359 17.890625 C 14.084751 17.890625 15.617724 16.930304 16.441406 15.501953 C 12.865769 15.382924 10.685509 11.487949 12.480469 8.3789062 C 12.394917 8.3759305 12.310986 8.3755208 12.226562 8.3769531 M 24,24 0,0z" />
             </Style>
 
+            <Style x:Key="PathIndicatorDownload" TargetType="Path" BasedOn="{StaticResource PathBase}">
+                <Setter Property="WidthRequest" Value="9" />
+                <Setter Property="HeightRequest" Value="12" />
+                <Setter Property="Data" Value="M 4.1015625 0 L 4.1015625 8.0605469 L 1.4902344 5.4355469 L 0.78515625 6.1386719 L 4.5996094 9.984375 L 8.4179688 6.1386719 L 8.3300781 6.0507812 L 7.7128906 5.4355469 L 5.0996094 8.0625 L 5.0996094 0 L 4.1015625 0 z M 1.1015625 11 L 1.1015625 12 L 1.2265625 12 L 8.0996094 12 L 8.0996094 11 L 1.1015625 11 M 9,12 0,0z" />
+            </Style>
+
             <Style x:Key="PlayerButton" TargetType="ImageButton">
                 <Setter Property="BackgroundColor" Value="Transparent" />
                 <Setter Property="WidthRequest" Value="{OnPlatform Default=48, WinUI=28}" />
